FIXED: Sidebar layout issue

--- a/blocks/src/style.scss
+++ b/blocks/src/style.scss
@@ -764,11 +764,11 @@ ul.awsm-error-message li {
 		width: 100%;
 	}
 	.awsm-job-2-col .awsm-b-filter-wrap.awsm-full-width-search-filter-wrap.awsm-jobs-alerts-on .awsm-b-filter-items, 
-	.awsm-job-2-col .awsm-b-filter-wrap.awsm-no-search-filter-wrap.awsm-jobs-alerts-on .awsm-b-filter-items{
+	.awsm-job-2-col .awsm-b-filter-wrap.awsm-no-search-filter-wrap.awsm-jobs-alerts-on .awsm-b-filter-items,{
 		width: 100% !important;
 	}
 	.awsm-job-2-col .awsm-b-filter-wrap .awsm-b-filter-items{
-		width: 100%;
+		width: 100% !important;
 	}
 	.awsm-job-2-col .awsm-b-filter-wrap form{
 		padding: 30px;
